@@ -490,6 +490,12 @@ eap_server=0
 # (default: 0 = disabled).
 #eap_sim_aka_result_ind=1
 
+# Trusted Network Connect (TNC)
+# If enabled, TNC validation will be required before the peer is allowed to
+# connect. Note: This is only used with EAP-TTLS and EAP-FAST. If any other
+# EAP method is enabled, the peer will be allowed to connect without TNC.
+#tnc=1
+
 
 ##### IEEE 802.11f - Inter-Access Point Protocol (IAPP) #######################
 
