@@ -3,7 +3,7 @@
   <head>
     <title>hostapd: IEEE 802.11 AP, IEEE 802.1X/WPA/WPA2/EAP/RADIUS Authenticator</title>
     <meta name="description" content="hostapd (IEEE 802.1X, WPA, WPA2, RSN, IEEE 802.11i Authenticator and RADIUS authentication server)">
-    <meta name="keywords" content="WPA, WPA2, IEEE 802.11i, IEEE 802.1X, WPA Authenticator, hostapd, TKIP, CCMP, EAP-PEAP, EAP-TLS, EAP-TTLS, EAP-SIM, EAP-AKA, EAP-GTC, EAP-MSCHAPv2, EAP-MD5, EAP-PAX, EAP-PSK, EAP-FAST, IEEE 802.1X Supplicant, IEEE 802.1aa, EAPOL, RSN, pre-authentication, PMKSA caching, BSD WPA Authenticator, FreeBSD WPA Authenticator, RADIUS authentication server, EAP authenticator, EAP server">
+    <meta name="keywords" content="WPA, WPA2, IEEE 802.11i, IEEE 802.1X, WPA Authenticator, hostapd, TKIP, CCMP, EAP-PEAP, EAP-TLS, EAP-TTLS, EAP-SIM, EAP-AKA, EAP-GTC, EAP-MSCHAPv2, EAP-MD5, EAP-PAX, EAP-PSK, EAP-FAST, IEEE 802.1X Supplicant, IEEE 802.1aa, EAPOL, RSN, pre-authentication, PMKSA caching, BSD WPA Authenticator, FreeBSD WPA Authenticator, RADIUS authentication server, EAP authenticator, EAP server, EAP-TNC, TNCS, IF-IMV, IF-TNCCS">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   </head>
 
@@ -68,6 +68,7 @@ material, they cannot be used with WPA or IEEE 802.1X WEP keying.</p>
 <li>EAP-MD5-Challenge</li>
 <li>EAP-MSCHAPv2</li>
 <li>EAP-GTC</li>
+<li>EAP-TNC (Trusted Network Connect; TNCS, IF-IMV, IF-T, IF-TNCCS)</li>
 </ul>
 
 <p>More information about EAP methods and interoperability testing is
@@ -265,7 +266,7 @@ Internet Systems Consortium (ISC).
     <address><a href="mailto:j@w1.fi">Jouni Malinen</a></address>
 <!-- Created: Sun Jan  2 17:20:17 PST 2005 -->
 <!-- hhmts start -->
-Last modified: Sat Feb 23 15:47:24 PST 2008
+Last modified: Sun Mar  9 12:12:08 EET 2008
 <!-- hhmts end -->
     </div>
   </body>
